--- a/walkthroughs/01-RHOSAK/walkthrough.adoc
+++ b/walkthroughs/01-RHOSAK/walkthrough.adoc
@@ -32,9 +32,13 @@ https://developers.redhat.com
 
 image::./images/developer-portal.png[]
 
+{empty} +
+
 Do the Login
 
 image::./images/developer-portal-login.png[]
+
+{empty} +
 
 In case that that you need to do your registration, you should see a form like that:
 
@@ -44,17 +48,25 @@ Access the Red Hat Streams for Apache Kafka Page, and click on `Create instance`
 
 image::./images/stream-for-apache-kafka-page.png[]
 
+{empty} +
+
 If it's your first access, you should see a screen like this:
 
 image::./images/create-kafka-instance.png[]
+
+{empty} +
 
 Access the Learning resources section from the left side menu.
 
 image::./images/learning-resources.png[]
 
+{empty} +
+
 Select the `Getting Started with Red Hat Openshift Streams for Apache Kafka` quickstart.
 
 image::./images/learning-resources-2.png[]
+
+{empty} +
 
 [time=25]
 == Getting Started with Red Hat Openshift Streams for Apache Kafka
@@ -77,39 +89,57 @@ Select the `Getting started with Red Hat OpenShift Connectors` quickstart.
 
 image::./images/learning-resources-3.png[]
 
+{empty} +
+
 NOTE: The creation of a new topic is not necessary since we can use the topic `my-first-kafka-topic` that was created in the previous lab.
 
 Click on the `Getting started with Red Hat OpenShift Connectors` to open the instructions.
 
 image::./images/connectors/01-learning-resource.png[]
 
+{empty} +
+
 From the side menu, select `Connectors` > `Connectors Instance`. Click on Create a connection instance.
 
 image::./images/connectors/02-connector-instances.png[]
+
+{empty} +
 
 In Connector type `data` in the search box, so select the `Data Generator source`.
 
 image::./images/connectors/03-create-connector.png[]
 
+{empty} +
+
 Select the Kafka instance previously created.
 
 image::./images/connectors/03-create-connector-2.png[]
+
+{empty} +
 
 Click on `Create a preview namespace`.
 
 image::./images/connectors/03-create-connector-3.png[]
 
+{empty} +
+
 Click on `Create a preview namespace`.
 
 image::./images/connectors/03-create-connector-4.png[]
+
+{empty} +
 
 Confirm it.
 
 image::./images/connectors/03-create-connector-5.png[]
 
+{empty} +
+
 Select the preview namespace.
 
 image::./images/connectors/03-create-connector-6.png[]
+
+{empty} +
 
 The topic `my-first-kafka-topic` was created in the previous lab.
 
@@ -122,21 +152,31 @@ Fill the form with the following instructions:
 
 image::./images/connectors/03-create-connector-7.png[]
 
+{empty} +
+
 Review the connector information.
 
 image::./images/connectors/03-create-connector-8.png[]
+
+{empty} +
 
 Check if it's deployed correctly.
 
 image::./images/connectors/03-create-connector-9.png[]
 
+{empty} +
+
 Access the `my-first-kafka-topic` Kafka topic in your Kafka instance.
 
 image::./images/connectors/04-access-kafka-topic.png[]
 
+{empty} +
+
 Go to the `Messages` tab. See if the messages are being stored succesfully in Kafka.
 
 image::./images/connectors/04-access-kafka-topic-messages.png[]
+
+{empty} +
 
 Fine, we succesfully created the Source Connector. 
 A Kafka Producer, so right now let's create the Kafka Consumer (Sink Connector).
@@ -145,13 +185,19 @@ On the Create Connector page, type: `http sink`.
 
 image::./images/connectors/05-create-sink.png[]
 
+{empty} +
+
 Select the Kafka instance previously created.
 
 image::./images/connectors/05-create-sink-1.png[]
 
+{empty} +
+
 Select the namespace already created.
 
 image::./images/connectors/05-create-sink-2.png[]
+
+{empty} +
 
 On the configuration fill with:
 
@@ -161,9 +207,13 @@ On the configuration fill with:
 
 image::./images/connectors/05-create-sink-3.png[]
 
+{empty} +
+
 Access the https://webhook.site to get your URL webhook.
 
 image::./images/connectors/05-create-sink-4.png[]
+
+{empty} +
 
 Fill the form with: 
 
@@ -174,20 +224,30 @@ Fill the form with:
 
 image::./images/connectors/05-create-sink-5.png[]
 
+{empty} +
+
 In the Error Handling option select: `log`.
 
 image::./images/connectors/05-create-sink-6.png[]
+
+{empty} +
 
 Check if everything is correctly deployed.
 
 image::./images/connectors/05-create-sink-7.png[]
 
+{empty} +
+
 Check if the messages are being generated in the webbook tab from your browser.
 
 image::./images/connectors/06-check-messages-webhook.png[]
 
+{empty} +
+
 Know that we are producing and consuming information from Kafka, let's take a look in the metrics from the Kafka instance dashboard.
 
 image::./images/connectors/07-kafka-metrics.png[]
+
+{empty} +
 
 image::./images/connectors/07-kafka-metrics-1.png[]
